one code encoding tries

--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(4499, 470758, 24053764)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +156,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get one hot encoding of column User_id\n",
+    "#one_hot_users = pd.get_dummies(df1['User_Id'])\n",
+    "#one_hot_users\n",
+    "# Drop column User_Id as it is now encoded\n",
+    "#df1 = df1.drop('User_Id',axis = 1)\n",
+    "# Join the encoded df\n",
+    "#df1 = df1.join(one_hot_users)\n",
+    "#df1  \n",
+    "\n",
+    "#This approach with dummies wouldnt work, because dataset is too large"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Veronika_Revyakina\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing one hot encoder from sklearn \n",
+    "from sklearn.preprocessing import OneHotEncoder \n",
+    "encoder = OneHotEncoder()\n",
+    "#X = [['male', 'from US', 'uses Safari'], ['female', 'from Europe', 'uses Firefox']] \n",
+    "#X-train matrix for encoder to learn categories\n",
+    "#enc.fit(X)  #process of encoder learning categories\n",
+    "one_hot_user_matrix = encoder.fit_transform(np.asarray(df1['User_Id']).reshape(1, -1)) \n",
+    "print(one_hot_user_matrix[:, :]) #amount of rows=amount of ratings , amount of columns=amount of unique user_ids\n",
+    "#CHECKED: size is OK\n",
+    "\n",
+    "#enc.transform([['female', 'from US', 'uses Safari'],['male', 'from Europe', 'uses Safari']]).toarray()\n",
+    "#finally transforming test matrix into one-hot-SLIGHTLY dont understand the output\n",
+    "#array([[1., 0., 0., 1., 0., 1.],[0., 1., 1., 0., 0., 1.]])\n",
+    "\n",
+    "#df1 = df1.join(one_hot_user_matrix)\n",
+    "#print(df1.iloc[::5000000, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -178,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
