display sparce matrix

--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +186,63 @@
       "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
       "  warnings.warn(msg, FutureWarning)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 264791)\t1.0\n",
+      "  (1, 146632)\t1.0\n",
+      "  (2, 157756)\t1.0\n",
+      "  (3, 5365)\t1.0\n",
+      "  (4, 146873)\t1.0\n",
+      "  (5, 159340)\t1.0\n",
+      "  (6, 22077)\t1.0\n",
+      "  (7, 222084)\t1.0\n",
+      "  (8, 327686)\t1.0\n",
+      "  (9, 397671)\t1.0\n",
+      "  (10, 267593)\t1.0\n",
+      "  (11, 392334)\t1.0\n",
+      "  (12, 460236)\t1.0\n",
+      "  (13, 425)\t1.0\n",
+      "  (14, 96982)\t1.0\n",
+      "  (15, 215175)\t1.0\n",
+      "  (16, 143503)\t1.0\n",
+      "  (17, 193552)\t1.0\n",
+      "  (18, 304537)\t1.0\n",
+      "  (19, 66354)\t1.0\n",
+      "  (20, 192402)\t1.0\n",
+      "  (21, 221658)\t1.0\n",
+      "  (22, 99569)\t1.0\n",
+      "  (23, 384788)\t1.0\n",
+      "  (24, 210278)\t1.0\n",
+      "  :\t:\n",
+      "  (24053739, 192931)\t1.0\n",
+      "  (24053740, 233027)\t1.0\n",
+      "  (24053741, 107764)\t1.0\n",
+      "  (24053742, 54650)\t1.0\n",
+      "  (24053743, 237582)\t1.0\n",
+      "  (24053744, 188967)\t1.0\n",
+      "  (24053745, 329447)\t1.0\n",
+      "  (24053746, 47830)\t1.0\n",
+      "  (24053747, 420612)\t1.0\n",
+      "  (24053748, 94419)\t1.0\n",
+      "  (24053749, 78800)\t1.0\n",
+      "  (24053750, 371923)\t1.0\n",
+      "  (24053751, 99100)\t1.0\n",
+      "  (24053752, 54078)\t1.0\n",
+      "  (24053753, 116865)\t1.0\n",
+      "  (24053754, 48566)\t1.0\n",
+      "  (24053755, 32896)\t1.0\n",
+      "  (24053756, 394458)\t1.0\n",
+      "  (24053757, 319568)\t1.0\n",
+      "  (24053758, 455348)\t1.0\n",
+      "  (24053759, 460485)\t1.0\n",
+      "  (24053760, 318604)\t1.0\n",
+      "  (24053761, 91453)\t1.0\n",
+      "  (24053762, 176332)\t1.0\n",
+      "  (24053763, 303210)\t1.0\n"
+     ]
     }
    ],
    "source": [
@@ -195,10 +252,8 @@
     "#X = [['male', 'from US', 'uses Safari'], ['female', 'from Europe', 'uses Firefox']] \n",
     "#X-train matrix for encoder to learn categories\n",
     "#enc.fit(X)  #process of encoder learning categories\n",
-    "one_hot_user_matrix = encoder.fit_transform(np.asarray(df1['User_Id']).reshape(1, -1)) \n",
+    "one_hot_user_matrix = encoder.fit_transform(np.asarray(df1['User_Id']).reshape(-1,1)) \n",
     "print(one_hot_user_matrix[:, :]) #amount of rows=amount of ratings , amount of columns=amount of unique user_ids\n",
-    "#CHECKED: size is OK\n",
-    "\n",
     "#enc.transform([['female', 'from US', 'uses Safari'],['male', 'from Europe', 'uses Safari']]).toarray()\n",
     "#finally transforming test matrix into one-hot-SLIGHTLY dont understand the output\n",
     "#array([[1., 0., 0., 1., 0., 1.],[0., 1., 1., 0., 0., 1.]])\n",
