--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -255,11 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.08084521, 0.07161149, 0.21821789, ..., 0.57735027, 0.11624764,\n",
+       "         0.12700013]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Nu=1/np.sqrt(one_hot_user_matrix.sum(axis=0))\n"
+    "Nu=1/np.sqrt(one_hot_user_matrix.sum(axis=0))\n",
+    "Nu"
    ]
   },
   {
@@ -740,7 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res2=res1.to_numpy"
+    "#res2=res1.to_numpy"
    ]
   },
   {
@@ -1147,7 +1160,27 @@
     }
    ],
    "source": [
-    "res1.mask(res1 != 0, 1) "
+    "res2=res1.mask(res1 != 0, 1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4499"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Nu*res2).size"
    ]
   },
   {
