added prediction func and adjusted metrics

--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(4499, 470758, 24053764)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,14 +255,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name             Shape            Bytes            Type\n",
-      "============================================================\n",
+      "Name             Shape              Bytes            Type\n",
+      "==============================================================\n",
       "\n",
-      "movie_np         24053764         192430112        float64\n",
-      "temp             1 x 269          1076             int32\n",
-      "last_record      1 x 428          1712             int32\n",
+      "movie_np         24053764           192430112        float64\n",
+      "temp             1 x 269            1076             int32\n",
+      "last_record      1 x 428            1712             int32\n",
+      "ratings          24053764 x 1       192430112        float64\n",
       "\n",
-      "Upper bound on total bytes  =       192432900\n"
+      "Upper bound on total bytes  =       384863012\n"
      ]
     }
    ],
@@ -272,21 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[0.08084521, 0.07161149, 0.21821789, ..., 0.57735027, 0.11624764,\n",
-       "         0.12700013]])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Nu=1/np.sqrt(one_hot_user_matrix.sum(axis=0))\n",
     "#Nu"
@@ -294,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +656,7 @@
        "[470758 rows x 4499 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,10 +704,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24053764, 1)\n",
+      "-3.103435827299837\n"
+     ]
+    }
+   ],
+   "source": [
+    "def svd_predict(X,omega,omega0,V):\n",
+    "    #omega (475257,1)\n",
+    "    #omega0 goes to (24053764,1) in sum \n",
+    "    # V (475257,3)\n",
+    "    # X (24053764, 475257)\n",
+    "    prod=X.dot(omega)#(24053764,1)\n",
+    "    linear_part=omega0+prod\n",
+    "    V_part=np.square(X.dot(V))-X.multiply(X).dot(np.square(V)) # (24053764,3)\n",
+    "    sqr_part=(0.5*np.sum(V_part,axis=1)).reshape(-1,1) # (24053764,1)\n",
+    "    return linear_part+sqr_part # (24053764,1)\n",
+    "\n",
+    "X=two_groups\n",
+    "omega=np.random.sample((X.shape[1],1)) #np.zeros((X.shape[1],1))\n",
+    "omega0=0\n",
+    "V=np.random.sample((X.shape[1],3))\n",
+    "      \n",
+    "out=svd_predict(X,omega,omega0,V)\n",
+    "print(np.shape(out))\n",
+    "\n",
+    "def root_mean_square_error(X,omega,omega0,V,ratings_actual):\n",
+    "    ratings_predict=svd_predict(X,omega,omega0,V)\n",
+    "    summands=np.power(ratings_actual-ratings_predict,2)\n",
+    "    print(np.shape(summands))\n",
+    "    mse=np.sum(summands)/len(ratings_predict)\n",
+    "    return np.sqrt(mse)\n",
+    "   \n",
+    "def r_squared(X,omega,omega0,V,ratings_actual):\n",
+    "    ratings_predict=svd_predict(X,omega,omega0,V)\n",
+    "    nom=np.sum(np.power(ratings_actual-ratings_predict,2))\n",
+    "    denom=np.sum(np.power(ratings_actual-np.mean(ratings_actual,axis=0),2))\n",
+    "    return 1-nom/denom\n",
+    "\n",
+    "out2=r_squared(X,omega,omega0,V,ratings)\n",
+    "print(out2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# function to create a list containing mini-batches \n",
+    "def create_mini_batch(data,i, batch_size): \n",
+    "    mini_batch = data[i * batch_size:(i + 1)*batch_size, :] \n",
+    "    X_mini = mini_batch[:, :-1] \n",
+    "    Y_mini = mini_batch[:, -1].reshape((-1, 1)) \n",
+    "        \n",
+    "    if data.shape[0] % batch_size != 0: \n",
+    "        mini_batch = data[i * batch_size:data.shape[0]] \n",
+    "        X_mini = mini_batch[:, :-1] \n",
+    "        Y_mini = mini_batch[:, -1].reshape((-1, 1)) \n",
+    "       \n",
+    "    return X_mini,Y_mini\n",
+    "\n",
+    "def mini_batch_gradient_descent(X,y_train,learning_rate,num_epoches,batch_size):\n",
+    "    #omega = np.matrix([0.0 for i in range(num_parameters)])\n",
+    "    omega=np.random.sample((X.shape[1],1)) #np.zeros((X.shape[1],1))\n",
+    "    omega0=0\n",
+    "    #cost = [] \n",
+    "    r2_tr=[]\n",
+    "    rmse_tr=[]\n",
+    "   \n",
+    "    it=0\n",
+    "    for it in range(num_epoches): \n",
+    "        data = np.hstack((X, y_train)) \n",
+    "        np.random.shuffle(data) #shuffle at each epoch (not every batch creation)\n",
+    "        n_minibatches = X.shape[0] // batch_size \n",
+    "        i = 0\n",
+    "        for i in range(n_minibatches + 1):\n",
+    "            X_mini,y_mini= create_mini_batch(data,i, batch_size) \n",
+    "        \n",
+    "            N=len(X_mini)\n",
+    "            error=y_mini-linear_regression_predict(X_mini,omega,omega0)\n",
+    "            omega=omega+learning_rate*2*((X_mini.T).dot(error))/N\n",
+    "            omega0=omega0+learning_rate*2*np.sum(error)/N\n",
+    "            r2_tr.append(r_squared(X_mini,omega,omega0, y_mini))\n",
+    "            rmse_tr.append(root_mean_square_error(X_mini,omega,omega0, y_mini))\n",
+    "    return omega,omega0,V"
+   ]
   }
  ],
  "metadata": {
