--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -755,9 +755,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n",
+      "(1, 1)\n",
+      "(24053764, 1)\n",
+      "(24053764, 1)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-70-1a98dc6ed433>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXj_col\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#(24053764, 1)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXj_col\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m         \u001b[0mdV\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXj_col\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXj_col\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#(475257, 1)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m         \u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mN\u001b[0m \u001b[1;31m#(1,1)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# function to create a list containing mini-batches \n",
     "def create_mini_batch(data,i, batch_size): \n",
@@ -773,10 +829,9 @@
     "    return X_mini,Y_mini\n",
     "\n",
     "def mini_batch_gradient_descent(X,y_train,learning_rate,num_epoches,batch_size):\n",
-    "    #omega = np.matrix([0.0 for i in range(num_parameters)])\n",
-    "    omega=np.random.sample((X.shape[1],1)) #np.zeros((X.shape[1],1))\n",
+    "    omega=np.random.sample((X.shape[1],1)) \n",
     "    omega0=0\n",
-    "    #cost = [] \n",
+    "    V=np.random.sample((X.shape[1],3))\n",
     "    r2_tr=[]\n",
     "    rmse_tr=[]\n",
     "   \n",
@@ -788,15 +843,87 @@
     "        i = 0\n",
     "        for i in range(n_minibatches + 1):\n",
     "            X_mini,y_mini= create_mini_batch(data,i, batch_size) \n",
-    "        \n",
-    "            N=len(X_mini)\n",
-    "            error=y_mini-linear_regression_predict(X_mini,omega,omega0)\n",
-    "            omega=omega+learning_rate*2*((X_mini.T).dot(error))/N\n",
-    "            omega0=omega0+learning_rate*2*np.sum(error)/N\n",
-    "            r2_tr.append(r_squared(X_mini,omega,omega0, y_mini))\n",
-    "            rmse_tr.append(root_mean_square_error(X_mini,omega,omega0, y_mini))\n",
-    "    return omega,omega0,V"
+    "            N=X_mini.shape[0] # 24053764\n",
+    "            error=y_mini-svd_predict(X_mini,omega,omega0,V) #(24053764,1)\n",
+    "            omega=omega+learning_rate*2*((X_mini.T).dot(error))/N #(475257,1)\n",
+    "            omega0=omega0+learning_rate*2*np.sum(error)/N #(1,1)\n",
+    "            K=3\n",
+    "            for l in range(K):\n",
+    "                for j in range (N):\n",
+    "                    Xj_col=X_mini.tocsr()[:,j].todense()#(24053764, 1)\n",
+    "                    dV=np.multiply(Xj_col,np.sum(X_mini*V[j][l],axis=1).reshape(-1,1))-V[j][l]*np.square(Xj_col) #(24053764, 1)\n",
+    "                    V[j][l]=V[j][l]+learning_rate*2*((error.T).dot(dV))/N #(1,1)\n",
+    "            r2_tr.append(r_squared(X_mini,omega,omega0,V, y_mini))\n",
+    "            rmse_tr.append(root_mean_square_error(X_mini,omega,omega0,V, y_mini))\n",
+    "    return omega,omega0,V\n",
+    "\n",
+    "error=ratings-svd_predict(X,omega,omega0,V)\n",
+    "N=X.shape[0]\n",
+    "learning_rate=0.001\n",
+    "omega=omega+learning_rate*2*((X.T).dot(error))/N #(475257,1)\n",
+    "omega0=omega0+learning_rate*2*np.sum(error)/N\n",
+    "for l in range(3):\n",
+    "    for j in range (N):\n",
+    "        Xj_col=X.tocsr()[:,j].todense() #(24053764, 1)\n",
+    "        print(np.shape(np.multiply(Xj_col,np.sum(X*V[j][l],axis=1).reshape(-1,1)))) #(24053764, 1)\n",
+    "        print(np.shape(V[j][l]*np.square(Xj_col)))\n",
+    "        dV=np.multiply(Xj_col,np.sum(X*V[j][l],axis=1).reshape(-1,1))-V[j][l]*np.square(Xj_col)\n",
+    "        print(np.shape((error.T).dot(dV))) #(1, 1)\n",
+    "        V[j][l]=V[j][l]+learning_rate*2*((error.T).dot(dV))/N #(1,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2=[]\n",
+    "rmse=[]\n",
+    "omega=[]\n",
+    "omega0=[]\n",
+    "r2_train=[]\n",
+    "rmse_train=[]\n",
+    "for item in range(len(x_train_arr)):\n",
+    "    x_test_rd=x_train_arr[item]\n",
+    "    y_test=y_train_arr[item]\n",
+    "    x_train_folds_arr=np.delete(x_train_arr,item)\n",
+    "    y_train_folds_arr=np.delete(y_train_arr,item)\n",
+    "    \n",
+    "    x_train_rd=np.empty((0,x_train_arr[item].shape[1]), int)\n",
+    "    y_train=np.empty((0,y_train_arr[item].shape[1]), int)\n",
+    "    #print(np.shape(y_train_folds_arr))\n",
+    "    for i in range (len(x_train_folds_arr)):\n",
+    "        #print(np.shape(y_train_folds_arr[i]))\n",
+    "        #x_train_all55 =(np.vstack((x_train_all55,x_train_folds_arr[i])))\n",
+    "        x_train_rd=np.concatenate((x_train_rd,x_train_arr[i]))\n",
+    "        y_train=np.concatenate((y_train,y_train_arr[i]))\n",
+    "    #print(np.shape(y_train))\n",
+    "    x_train,mean,std=normalization(x_train_rd)     #normalize all train dataset\n",
+    "    x_test=normalization_with_params(x_test_rd,mean,std)  #normalize test dataset with mean and std of train\n",
+    "    #print(x)\n",
+    "    #start = time.time()\n",
+    "    omega_item,omega0_item=mini_batch_gradient_descent(x_train,y_train,learning_rate = 0.001,num_epoches=18,\n",
+    "                                                            batch_size=800)\n",
+    "    #stop = time.time()\n",
+    "    #duration = stop-start\n",
+    "    #print(duration)\n",
+    "    r2.insert(item,r_squared(x_test,omega_item,omega0_item,y_test))\n",
+    "    rmse.insert(item,root_mean_square_error(x_test,omega_item,omega0_item,y_test))\n",
+    "    omega.insert(item,omega_item)\n",
+    "    omega0.insert(item,omega0_item)\n",
+    "    r2_train.insert(item,r_squared(x_train,omega_item,omega0_item,y_train))\n",
+    "    rmse_train.insert(item,root_mean_square_error(x_train,omega_item,omega0_item,y_train))\n",
+    "    #print(cost)\n",
+    "    print(r2[item],rmse[item],r2_train[item],rmse_train[item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
