--- a/NetflixPrize_DataPreprocessing.ipynb
+++ b/NetflixPrize_DataPreprocessing.ipynb
@@ -200,12 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('NetflixProcessedDataFile.csv', sep='\\t')"
+    "df.to_csv('NetflixProcessedDataFile.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
