--- a/NetflixPrize_2.ipynb
+++ b/NetflixPrize_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,8 @@
     "    # X (24053764, 475257)\n",
     "    prod=X.dot(omega)#(24053764,1)\n",
     "    linear_part=omega0+prod\n",
-    "    V_part=np.square(sum_const)-X.power(2).dot(np.square(V)) # (24053764,3)\n",
+    "    #V_part=np.square(sum_const)-X.power(2).dot(np.square(V)) # (24053764,3)\n",
+    "    V_part=(sum_const**2)-X.power(2).dot((V)**2) \n",
     "    sqr_part=(0.5*np.sum(V_part,axis=1)).reshape(-1,1) # (24053764,1)\n",
     "    return linear_part+sqr_part # (24053764,1)\n",
     "    \n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,8 @@
     "\n",
     "def mini_batch_gradient_descent(X_train,Y_train,K,learning_rate,num_epoches,batch_size):\n",
     "    omega=np.random.sample((X_train.shape[1],1)) \n",
-    "    omega0=0\n",
+    "    #omega=np.array([0.5]*(X_train.shape[1]))\n",
+    "    omega0=0.5\n",
     "    #V=np.random.sample((X_train.shape[1],K))\n",
     "    V=(np.array([0.5]*(X_train.shape[1]*K)).reshape(X_train.shape[1],K))\n",
     "    r2_tr=[]\n",
@@ -253,21 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "489.9258143901825\n",
-      "-0.14422076201792877 1.1603108424762874 -0.11599644088709016 1.1465606383145575\n",
-      "518.0112597942352\n",
-      "-0.13017906228347886 1.1544068566939918 -0.12171575575406623 1.149122531753114\n",
-      "508.1576488018036\n",
-      "-0.1414707711834382 1.1659796407987524 -0.11825921611893686 1.145942931929629\n",
-      "520.2590396404266\n",
-      "-0.13751348494235227 1.1553114390212675 -0.12956927745657065 1.1537442336548456\n"
+      "471.74917697906494\n",
+      "-0.15281695097850712 1.1646612214560201 -0.11561538536681937 1.1463648757897293\n",
+      "481.4578561782837\n",
+      "-0.1531907358813609 1.1661001236333077 -0.1192288546677085 1.1478479932780807\n",
+      "478.0649871826172\n",
+      "-0.14495764794730603 1.1677591551373108 -0.12369158337504182 1.1487229854198209\n",
+      "541.4026155471802\n",
+      "-0.1326883210204901 1.1528585049059301 -0.11484886233758407 1.1462018500405524\n",
+      "519.696811914444\n",
+      "-0.1300558592810519 1.1481567942006532 -0.1265319713873574 1.153189033653985\n"
      ]
     }
    ],
@@ -281,7 +285,7 @@
     "cross_val_parts_amount=5\n",
     "cross_val_part_size=X.shape[0]//cross_val_parts_amount\n",
     "item=0\n",
-    "for item in range(cross_val_parts_amount-1):\n",
+    "for item in range(cross_val_parts_amount):\n",
     "    X_test=X.tocsr()[item*cross_val_part_size:(item+1)*cross_val_part_size,:]\n",
     "    Y_test=ratings[item*cross_val_part_size:(item+1)*cross_val_part_size]\n",
     "    X_train=vstack([X.tocsr()[0:(item)*cross_val_part_size,:], X.tocsr()[(item+1)*cross_val_part_size:X.shape[0],:]], 'csr') \n",
@@ -309,9 +313,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>E</th>\n",
+       "      <th>SD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>RMSE</td>\n",
+       "      <td>1.164661</td>\n",
+       "      <td>1.166100</td>\n",
+       "      <td>1.167759</td>\n",
+       "      <td>1.152859</td>\n",
+       "      <td>1.148157</td>\n",
+       "      <td>1.159907</td>\n",
+       "      <td>0.007879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>R^2</td>\n",
+       "      <td>-0.152817</td>\n",
+       "      <td>-0.153191</td>\n",
+       "      <td>-0.144958</td>\n",
+       "      <td>-0.132688</td>\n",
+       "      <td>-0.130056</td>\n",
+       "      <td>-0.142742</td>\n",
+       "      <td>0.009773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>RMSE train</td>\n",
+       "      <td>1.146365</td>\n",
+       "      <td>1.146365</td>\n",
+       "      <td>1.148723</td>\n",
+       "      <td>1.146202</td>\n",
+       "      <td>1.153189</td>\n",
+       "      <td>1.148465</td>\n",
+       "      <td>0.002542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>R^2 train</td>\n",
+       "      <td>-0.115615</td>\n",
+       "      <td>-0.119229</td>\n",
+       "      <td>-0.123692</td>\n",
+       "      <td>-0.114849</td>\n",
+       "      <td>-0.126532</td>\n",
+       "      <td>-0.119983</td>\n",
+       "      <td>0.004531</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   1         2         3         4         5         E  \\\n",
+       "RMSE        1.164661  1.166100  1.167759  1.152859  1.148157  1.159907   \n",
+       "R^2        -0.152817 -0.153191 -0.144958 -0.132688 -0.130056 -0.142742   \n",
+       "RMSE train  1.146365  1.146365  1.148723  1.146202  1.153189  1.148465   \n",
+       "R^2 train  -0.115615 -0.119229 -0.123692 -0.114849 -0.126532 -0.119983   \n",
+       "\n",
+       "                  SD  \n",
+       "RMSE        0.007879  \n",
+       "R^2         0.009773  \n",
+       "RMSE train  0.002542  \n",
+       "R^2 train   0.004531  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# initialise data of lists. \n",
     "data = {'1':[rmse[0],r2[0],rmse_train[0],r2_train[0]], \n",
@@ -326,6 +424,32 @@
     "df_res = pd.DataFrame(data, index =['RMSE', 'R^2','RMSE train','R^2 train']) \n",
     "\n",
     "df_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20096101, 497959)\n",
+      "(20096101, 497959)\n",
+      "(20096101, 497959)\n",
+      "(20096101, 497959)\n",
+      "(20096101, 497959)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cross_val_part_size=X.shape[0]//(cross_val_parts_amount)\n",
+    "cross_val_part_size\n",
+    "j=0\n",
+    "for j in range(cross_val_parts_amount):\n",
+    "    X_test=X.tocsr()[item*cross_val_part_size:(item+1)*cross_val_part_size,:]\n",
+    "    print(np.shape(X_test))"
    ]
   },
   {
